# manufold

./: .env.TEMPLATE  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  docker-compose.override.yml  docker-compose.with-pg.yml  docker-compose.yml  run_stack.sh
.github/workflows/: run-tests.yml
backend/: Dockerfile  README.md  pyproject.toml  start_adk_web.sh  start_api_server.sh
backend/src/: __init__.py  adk_api.py  main.py
frontend/: .env  .gitignore  .prettierrc.json  eslint.config.ts  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  output.css  styles.css
frontend/src/api/: adk.ts  api.ts  endpoints.ts  index.ts  manubot.ts
frontend/src/components/: AppArtifacts.vue  AppBrain.vue  AppButton.vue  AppFrame.vue  AppTabs.vue  AppToasts.ts  AppToasts.vue  AppUpload.vue  AppUploadBadge.vue
frontend/src/pages/: PageEditor.vue  PageHome.vue  dev-test.md  example-1.md  example-2.md  example.md
frontend/src/util/: download.ts  markdown.ts  misc.ts  string.ts  upload.ts
