[project]
name = "manufold-backend"
version = "0.1.0"
description = "A backend for the Manufold project, providing APIs for AI-driven manuscript generation."
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.104",
  "manufold",
  "uvicorn[standard]>=0.24",
]

[tool.uv]
# manufold = { path = "/opt/manufold" }
sources.manufold = { path = "../packages/manufold" }
